2010-05-20  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/Exceptions.py, S3/S3.py: Some HTTP_400 exceptions 
	  are retriable.

2010-03-19  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/ACL.py: Print all ACLs for a Grantee
	(one Grantee can have multiple different Grant entries)

2010-03-19  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Enable bucket-level ACL setting
	* s3cmd, S3/AccessLog.py, ...: Added [accesslog] command.
	* s3cmd: Fix imports from S3.Utils

2009-12-10  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Path separator conversion on Windows hosts.

2009-10-08  Michal Ludvig  <mludvig@logix.net.nz>

	* Released version 0.9.9.91
	  -------------------------

	* S3/PkgInfo.py: Updated to 0.9.9.91
	* NEWS: News for 0.9.9.91

2009-10-08  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/S3.py: fixed reference to _max_retries.

2009-10-06  Michal Ludvig  <mludvig@logix.net.nz>

	* Released version 0.9.9.90
	  -------------------------

	* S3/PkgInfo.py: Updated to 0.9.9.90
	* NEWS: News for 0.9.9.90

2009-10-06  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/S3.py: Introduce throttling on upload only after
	  second failure. I.e. first retry at full speed.
	* TODO: Updated with new ideas.

2009-06-02  Michal Ludvig  <michal@logix.cz>

	* s3cmd: New [fixbucket] command for fixing invalid object
	  names in a given Bucket. For instance names with &#x08; in
	  them (not sure how people manage to upload them but they do).
	* S3/S3.py, S3/Utils.py, S3/Config.py: Support methods for 
	  the above, plus advise user to run 'fixbucket' when XML parsing 
	  fails.
	* NEWS: Updated.
	
2009-05-29  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py: New function replace_nonprintables()
	* s3cmd: Filter local filenames through the above function
	  to avoid problems with uploaded filenames containing invalid 
	  XML entities, eg &#08; 
	* S3/S3.py: Warn if a non-printables char is passed to
	  urlencode_string() - they should have been replaced earlier 